Fixed alignment, and added About content to Home file, then deleted original About.html file

--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,11 @@
 .aboutcontents {
   display: flex;
   flex-direction: column;
-  margin-left: 300px; /*margins of the image and text*/
-  margin-right: 300px;
+  margin-right: 300px; /*margins of the image and text*/
+  margin-left: 25%
 }
 
-.profile {
+.aboutme {
   display: block;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -13,19 +13,7 @@
   background-color: white;
 }
 
-.profile img {
-  height: 215px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-  float:left;
-  /*make image round*/
-  border-top-left-radius: 50% 50%;
-  border-top-right-radius: 50% 50%;
-  border-bottom-right-radius: 50% 50%;
-  border-bottom-left-radius: 50% 50%;
-}
-
-.profile h1 {
-  color: #ED3642; /*dark pink*/
-  font-size: 25px;
+.aboutme h1 {
+  color: #ED3642; /*dark pink */
+  font-size: 20px;
 }
