--- a/css/home.css
+++ b/css/home.css
@@ -11,11 +11,9 @@
   margin-bottom: 10px;
   padding: 20px;
   background-color: white;
-
 }
 
 .welcome h1 {
   color: #ED3642; /*dark pink */
-  text-transform: uppercase;
   font-size: 20px;
 }
