--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@ body {
 
 .navbar {
   display: flex;
+  position: fixed;
+  /*overflow-x: hidden; */
   flex-direction: column;
   background-color: #083D77; /*dark blue*/
   margin-right: 85%;
@@ -43,7 +45,7 @@ body {
 }
 
 .intro h1 {
-  font-size: 20px;
+  font-size: 19px;
 }
 
 .intro p {
@@ -54,6 +56,7 @@ body {
   height: 450px;
   width: 100%;
   opacity: 0.9;
+  margin-top: 5%;
   margin-left: 25%
   margin-right: 300px;
 }
